Migrate PathExpressionParserTest
Ditch use of Hamcrest, simplifying assertions.

Change-Id: If2a7adf29b486050ba8ba44bef0f183f9f621cdd
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>